Refactored Test Suite

--- a/src/resources/globalConfig.properties
+++ b/src/resources/globalConfig.properties
@@ -2,4 +2,4 @@
 browser = chrome
 
 # baseURL = URL where your start should always start (No need for ",')
-baseURL = https://www.example.com
+baseURL = http://automationpractice.com/index.php
