--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,53 @@
   <version>1.0-SNAPSHOT</version>
   <name>webdriver</name>
   <url>http://maven.apache.org</url>
+  
+  <!-- Test Profiles -->
+  <profiles>
+  	<profile>
+  		<id>Smoke</id>
+  		<build>
+		    <pluginManagement>
+		      <plugins>
+		        <plugin>
+		          <groupId>org.apache.maven.plugins</groupId>
+		          <artifactId>maven-surefire-plugin</artifactId>
+		          <version>3.0.0-M1</version>
+		          <configuration>
+		          <suiteXmlFiles>
+		            <suiteXmlFile>SmokeTest.xml</suiteXmlFile>
+		          </suiteXmlFiles>
+		        </configuration>
+		        </plugin>
+		      </plugins>
+			</pluginManagement>
+	  </build>
+  	</profile>
+  	<profile>
+  		<id>Regression</id>
+  		<build>
+		    <pluginManagement>
+		      <plugins>
+		        <plugin>
+		          <groupId>org.apache.maven.plugins</groupId>
+		          <artifactId>maven-surefire-plugin</artifactId>
+		          <version>3.0.0-M1</version>
+		          <configuration>
+		          <suiteXmlFiles>
+		            <suiteXmlFile>RegressionTest.xml</suiteXmlFile>
+		          </suiteXmlFiles>
+		        </configuration>
+		        </plugin>
+		      </plugins>
+			</pluginManagement>
+	  </build>
+  	</profile>
+  </profiles>
+  
+  
+  
+  <!-- Test Configurations -->
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
